# my-archiver

./: cabal.project  my-archiver.cabal
.github/workflows/: haskell.yml
app/: Abbrevs.hs  Config.hs  FeatureExtractor.hs  Main.hs  SoundcloudArchiver.hs  Term.hs  Test.hs  Utils.hs  YoutubeArchiver.hs
