cabal-version:      2.4
name:               my-archiver
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             uni marx
maintainer:         uniwuni@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable my-archiver
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: YoutubeArchiver, Config, Abbrevs, Term, Utils, SoundcloudArchiver

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0, hsparql, aeson, bytestring, text, rdf4h, filepath, cmdargs, directory, byline, uri-encode, transformers, time, scientific
    hs-source-dirs:   app
    default-language: Haskell2010
